# pacu

./: .gitignore  README.md  clean.sh  pyproject.toml
.github/workflows/: feature-tests.yml
SK-Hasane-Ahammad/: README.md  conda_packages.txt  feature_extraction.py  requirements.txt  train_and_evaluate_model.py
SK-Hasane-Ahammad/dataset/ISCX-URL-2016/: index.html  index.html?C=D;O=A  index.html?C=M;O=A  index.html?C=N;O=D  index.html?C=S;O=A
SK-Hasane-Ahammad/iansa/: feature_extractor.py  features.py  main.py
SK-Hasane-Ahammad/iansa/src/: feature.py  features.py  perceptron.py  utils.py
SK-Hasane-Ahammad/processed_data/: legitimate.csv  phishing.csv  urldata.csv
iansa/: dataset.py  feature_extractor.py  features.py
iansa/dataset/: legitimate-35k.csv  phishing-35k.csv
iansa/features/: distribution_features.py  distributions.py  features.py  lexical_features.py  test_distribution_features.py  test_lexical_features.py
iansa/models/: charcnn.py  cnnlstm.py
iansa/src/: cli.py  main.py  train.py
iansa/src/models/: gru.py  mlp.py  siamese.py
scripts/: download-data-and-parse.sh
src/: cli.py  extract.py  main.py  train.py
src/features/: distribution_features.py  distributions.py  features.py  test_distribution_features.py  test_lexical_features.py
src/models/: charcnn.py  gru.py  lstm.py  mlp.py  model.py  siamese.py
src/pacu/: cli.py  extract.py  train.py
src/pacu/features/: distribution_features.py  distributions.py  extractor.py  features.py  lexical_features.py  test_distribution_features.py  test_lexical_features.py
src/pacu/models/: gru.py  (+8 more)
