[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pacu"
version = "1.0.0"
description = "Tool to test different machine and deep learning models on URL phishing detection."
authors = [
  { name = "Bernardo Pavloski Tomasi"      , email = "bpt22@inf.ufpr.br"  },
  { name = "Davi Campos Ribeiro"           , email = "dcr23@inf.ufpr.br"  },
  { name = "Pedro Henrique Friedrich Ramos", email = "phfr24@inf.ufpr.br" }
]
readme = "README.md"
requires-python = ">=3.7"

dependencies = [
  "click",
  "torch",
  "scikit-learn",
  "scipy",
  "pandas",
  "xgboost",
  "lightgbm"
]

[project.scripts]
pacu = "pacu.cli:cli"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

